--- a/Assets/MyGames/Tests/EditMode/EditMode.asmdef
+++ b/Assets/MyGames/Tests/EditMode/EditMode.asmdef
@@ -13,7 +13,11 @@
     "allowUnsafeCode": false,
     "overrideReferences": true,
     "precompiledReferences": [
-        "nunit.framework.dll"
+        "nunit.framework.dll",
+        "Moq.dll",
+        "Castle.Core.dll",
+        "System.Threading.Tasks.Extensions.dll",
+        "System.Runtime.CompilerServices.Unsafe.dll"
     ],
     "autoReferenced": false,
     "defineConstraints": [
